# Snowflake-App-Runtime-Example

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md
.github/: CODEOWNERS
.github/actions/snowflake-cli/: action.yml
.github/workflows/: cleanup-branch.yml  dcm-deploy.yml  deploy-dev.yml  deploy-prod.yml
apps/_template/: README.md  pyproject.toml
apps/_template-nextjs/: README.md  snowflake.yml
apps/_template-streamlit/: README.md  snowflake.yml  streamlit_app.py
apps/nextjs-dashboard/: README.md  app.yml  package-lock.json  package.json  snowflake.yml
apps/nextjs-dashboard/app/: layout.tsx  page.tsx
apps/nextjs-dashboard/components/: charts.tsx  kpi-grid.tsx
apps/nextjs-dashboard/lib/: constants.ts  queries.ts
apps/ski-resort-bi/: Dockerfile  README.md  build_spec.yaml  entrypoint.sh  requirements.txt  service-spec.yaml  setup.sql
apps/ski-resort-bi/.localdev/: connections.toml.example
apps/ski-resort-bi/cortex-code-agent/: README.md  __init__.py  _jwt_auth.py  agent_client.py  discovery.py  evidence.py  evidence_planner.py  exploration_tools.py  guardrails.py  policy.py  providers.py  reconciler.py  semantic_broker.py  system_prompt.md  system_prompt_agent.md  system_prompt_explore.md
apps/ski-resort-bi/docs/: PLAN.md
apps/streamlit-dashboard/: README.md  pyproject.toml  snowflake.yml  streamlit_app.py
apps/streamlit-dashboard/.localdev/: connections.toml.example
docs/: ARCHITECTURE.md  ONBOARDING.md  PIPELINE_SETUP.md  TEARDOWN.md
governance/: README.md  manifest.yml  post_deployment_grants.sql
scripts/: teardown.sh
(+15 files in other folders)
